# Carousel-Phase-Retrieval-Algorithm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Docker/: Dockerfile.ubuntu-22.04_CUDA-11.8_oneAPI-2024.1-HPC_Boost-1.84.0_Devel  third-party-programs.txt
include/: Allocator.hpp  CPRA.hpp  CPRA_Impl.hpp  CPRA_Interface.hpp  CUDA_CPRA.cuh  CUDA_Error_Check.hpp  CUDA_Impl.cuh  Command_Parser.hpp  Impl_Factory.hpp  MKL_Impl.hpp
include/detail/: CPRA.inl  CPRA_Common.inl  CUDA_CPRA.inl  CUDA_Impl.inl  CUDA_Impl_Kernel.cuh  MKL_Impl.inl
src/: CMakeLists.txt  CONV_CUDA.cu  CONV_MKL.cpp  CPRA_CUDA.cu  CPRA_MKL.cpp  InterpR_CUDA.cu  benchmark_cuda.cu  benchmark_mkl.cpp
test/: CMakeLists.txt  temp_test.cpp  unitest.cpp  unitest_cuda.cu  unitest_mkl.cpp
